--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,6 +3,9 @@
   <head>
     <title>{{ site.title }} | {{site.affiliation}}</title>
 
+    <!-- Latex Support  -->
+    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
