--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -3,9 +3,6 @@
   <head>
     <title>{{ site.title }} | {{site.affiliation}}</title>
 
-    <!-- Latex Support  -->
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
-
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -87,11 +84,11 @@
         </a>
         {% endif %}
 
-        <!-- {% if site.twitter %}
+        {% if site.twitter %}
         <a style="margin: 0 0 0 0" href="{{ site.twitter }}">
           <i class="fab fa-twitter"></i>
         </a>
-        {% endif %} -->
+        {% endif %}
         </div>
         <br>
 
@@ -124,3 +121,6 @@
     {% endif %}
   </body>
 </html>
+
+
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
