--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -34,6 +34,10 @@
     <link rel="stylesheet" href="./assets/css/publications-no-dark-mode.css">
     {% endif %}
 
+    <!-- Add MathJax for LaTeX rendering -->
+    <script type="text/javascript" async
+      src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+    </script>
   </head>
   <body>
     <div class="wrapper">
